1999-10-18  Jonathan Blandford  <jrb@redhat.com>

	* gnomelib-init2.c (gnome_program_parse_args): fixed so it compiles
	(gnome_program_get): fixed so it compiles
	(gnome_program_module_register): fixed so it compiles.

1999-10-07  Elliot Lee  <sopwith@redhat.com>
	* gnomelib-init2.[ch]: New implementation.
	* gnomelib-init.[ch]: Use new init system.
	* Makefile.am: Add gnome-portability.h, gnomelib-init{,2}.h to headers, remove gnome-popt.h from headers.
	Add gnomelib-init2.c to sources, remove gnome-popt.c from sources.
	* gconfigger.c, gnome-gen-mimedb.c, gnome-moz-remote.c: Use new init setup.
	* gnome-i18n.h, gnome-i18nP.h: Instead of duplicating everything in two header files, add hooks so we can
	avoid doing that.
	* gnome-mime-info.c, gnome-util.c, gnome-util.h: Avoid using deprecated functions.
	* gnome-mime.c: Case-insensitive file extension hashing.
	* gnome-portability.h.in: New file (gives us a working g_alloca on any system).
	* libgnome.h: Add new header files
	* libgnomeP.h: avoid duplication with libgnome.h

1999-10-06  Owen Taylor  <otaylor@redhat.com>

	* gnome-config.c (access_config_extended): Always refill
	the cache with valid values immediately after invalidating
	this. This simplifies code, and (more importantly) fixes
	a bug where we could return with cache_filename_value2
	pointing to freed memory, and then later try to free
	it again. (Bug #2618)

1999-10-05  Owen Taylor  <otaylor@redhat.com>

	(Bug #2593)
	* gnome-i18n.c (read_aliases): Fix a memory leak by not
	overwriting old entries in the alias hash table.

	* gnome-dentry.c (gnome_desktop_entry_save): Fix a mem-leak
	when saving desktop entries with comments.

1999-10-04  Elliot Lee  <sopwith@redhat.com>
	* gnome-sound.c: Don't set audio stream byte order - use what audiofile gives
	us.

1999-10-04  Elliot Lee  <sopwith@redhat.com>
	* gnome-i18n.c: Revert a bugnum-less commit.
	
Mon Oct 04 11:24:51 1999  George Lebl  <jirka@5z.com>
