@@ -11,3 +11,4 @@ gnome-dump-metadata
 gnome-moz-remote
 gconfigger
 gnome-gen-mimedb
+gnome-portability.h
