@@ -1,5 +1,7 @@
 1999-10-18  Jonathan Blandford  <jrb@redhat.com>
 
+	* Makefile.am (libgnome10compat_a_SOURCES): new compatibility lib.
+
 	* gnomelib-init2.c (gnome_program_parse_args): fixed so it compiles
 	(gnome_program_get): fixed so it compiles
 	(gnome_program_module_register): fixed so it compiles.
